[package]
name = "prime-factors"
version = "0.1.0"
authors = ["Morley, Jonathan <jmorley@cvent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.3.1"
num-format = "0.4.0"
num-traits = "0.2.14"
primal = "0.3.0"
